# bazel-aws-lc-fips-repro

./: .bazelrc  .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE  aws_lc_fips_sys.bazel  cargo-bazel-fips-lock.json  cargo-bazel-lock.json  cargo-bazel-nofips-lock.json  cc_wrapper.sh  downloader.cfg  fips_mode.bzl  ld_wrapper.sh  multi_arch.bzl  ranlib_wrapper.sh
aws_lc_repro/: BUILD  Cargo.toml  test.json  test.nofips.json
aws_lc_repro/src/: main.rs
patches/: BUILD  aws-lc-fips-sys-provide-go.patch  aws-lc-fips-sys-use-ar-as-ranlib.patch
precompile/: BUILD
